<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp" android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/design_default_color_primary"
    tools:context=".DangKyActivity"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnKhungdangky"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_marginEnd="@dimen/size10dp"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/size10dp"
        android:text="@string/dangky"
        android:textColor="@color/white"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lnKhungdangky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/edTenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/gray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            />

        <EditText
            android:id="@+id/edMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/matkhau"
            android:textColorHint="@color/gray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/gray"
            />

        <RadioGroup
            android:id="@+id/grGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size10dp"
            >

            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:checked="true"

                />
            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/gray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/calender"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/gray"
            />

        <EditText
            android:id="@+id/edCMNDDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/cmt"
            android:numeric="integer"
            android:padding="@dimen/size10dp"
            android:textColorHint="@color/gray"
            android:maxLength="8"
            android:textColor="@color/gray"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnDongYDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:backgroundTint="@color/colorGreenButton"
                />
            <Button
                android:id="@+id/btnThoatDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:backgroundTint="@color/colorOrganButton"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
