<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounddangnhap"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnKhungDangNhap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size20dp"
        android:text="@string/dangnhap"
        android:textColor="@color/white"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"
        android:layout_above="@id/lnKhungDangNhap"
        android:layout_alignRight="@+id/lnKhungDangNhap"


        android:src="@drawable/logodangnhap" />

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tendangnhap"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            />


        <EditText
            android:id="@+id/edMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matkhau"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:password="true"
            />

        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:padding="@dimen/size10dp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:backgroundTint="@color/red"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnDangKyDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:padding="@dimen/size10dp"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>
